crates/alder-parse/src/snapshots/alder_parse__type___tests__error_row_tag_args_unclosed.snap
---
source: crates/alder-parse/src/type_.rs
description: "[:not_found(Id]"
---
ErrorRow(
    Tag(
        ArgEnd(
            ExpectedEnd {
                opening: Position {
                    line: 1,
                    column: 12,
                },
                boundary: Position {
                    line: 1,
                    column: 15,
                },
                unexpected: Position {
                    line: 1,
                    column: 15,
                },
            },
        ),
        1,
        2,
    ),
    1,
    1,
)
