crates/alder-parse/src/snapshots/alder_parse__type___tests__error_row_unclosed.snap
---
source: crates/alder-parse/src/type_.rs
description: "[:timeout"
---
ErrorRow(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 1,
            },
            boundary: Position {
                line: 1,
                column: 10,
            },
            unexpected: Position {
                line: 1,
                column: 10,
            },
        },
    ),
    1,
    1,
)
