crates/alder-parse/src/snapshots/alder_parse__type___tests__error_row_var_only.snap
---
source: crates/alder-parse/src/type_.rs
description: "[r]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: ErrorRow {
        tags: [],
        ext: Some(
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 3,
                    },
                },
                value: "r",
            },
        ),
    },
}
