crates/alder-parse/src/snapshots/alder_parse__type___tests__error_tuple_unclosed.snap
---
source: crates/alder-parse/src/type_.rs
description: "(a, b"
---
Tuple(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 1,
            },
            boundary: Position {
                line: 1,
                column: 6,
            },
            unexpected: Position {
                line: 1,
                column: 6,
            },
        },
    ),
    1,
    1,
)
