crates/alder-parse/src/snapshots/alder_parse__type___tests__fn_hkt.snap
---
source: crates/alder-parse/src/type_.rs
description: "fn(a) -> f[b]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 14,
        },
    },
    value: Fn {
        params: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 4,
                    },
                    end: Position {
                        line: 1,
                        column: 5,
                    },
                },
                value: Var {
                    name: "a",
                    args: [],
                },
            },
        ],
        ret: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 10,
                },
                end: Position {
                    line: 1,
                    column: 14,
                },
            },
            value: Var {
                name: "f",
                args: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 12,
                            },
                            end: Position {
                                line: 1,
                                column: 13,
                            },
                        },
                        value: Var {
                            name: "b",
                            args: [],
                        },
                    },
                ],
            },
        },
    },
}
