crates/alder-parse/src/snapshots/alder_parse__type___tests__fn_param_is_fn.snap
---
source: crates/alder-parse/src/type_.rs
description: "fn(fn(a) b, Array[a]) Array[b]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 31,
        },
    },
    value: Fn {
        params: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 4,
                    },
                    end: Position {
                        line: 1,
                        column: 11,
                    },
                },
                value: Fn {
                    params: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 7,
                                },
                                end: Position {
                                    line: 1,
                                    column: 8,
                                },
                            },
                            value: Var {
                                name: "a",
                                args: [],
                            },
                        },
                    ],
                    ret: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 10,
                            },
                            end: Position {
                                line: 1,
                                column: 11,
                            },
                        },
                        value: Var {
                            name: "b",
                            args: [],
                        },
                    },
                },
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 13,
                    },
                    end: Position {
                        line: 1,
                        column: 21,
                    },
                },
                value: Named {
                    path: Path {
                        segments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 13,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 18,
                                    },
                                },
                                value: "Array",
                            },
                        ],
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 19,
                                },
                                end: Position {
                                    line: 1,
                                    column: 20,
                                },
                            },
                            value: Var {
                                name: "a",
                                args: [],
                            },
                        },
                    ],
                },
            },
        ],
        ret: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 23,
                },
                end: Position {
                    line: 1,
                    column: 31,
                },
            },
            value: Named {
                path: Path {
                    segments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 23,
                                },
                                end: Position {
                                    line: 1,
                                    column: 28,
                                },
                            },
                            value: "Array",
                        },
                    ],
                },
                args: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 29,
                            },
                            end: Position {
                                line: 1,
                                column: 30,
                            },
                        },
                        value: Var {
                            name: "b",
                            args: [],
                        },
                    },
                ],
            },
        },
    },
}
