crates/alder-parse/src/snapshots/alder_parse__type___tests__fn_returning_fn.snap
---
source: crates/alder-parse/src/type_.rs
description: fn(a) fn(b) c
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 14,
        },
    },
    value: Fn {
        params: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 4,
                    },
                    end: Position {
                        line: 1,
                        column: 5,
                    },
                },
                value: Var {
                    name: "a",
                    args: [],
                },
            },
        ],
        ret: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 7,
                },
                end: Position {
                    line: 1,
                    column: 14,
                },
            },
            value: Fn {
                params: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 10,
                            },
                            end: Position {
                                line: 1,
                                column: 11,
                            },
                        },
                        value: Var {
                            name: "b",
                            args: [],
                        },
                    },
                ],
                ret: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 13,
                        },
                        end: Position {
                            line: 1,
                            column: 14,
                        },
                    },
                    value: Var {
                        name: "c",
                        args: [],
                    },
                },
            },
        },
    },
}
